# nts-pirate-radio

./: .envrc  Dockerfile.template  README.md  balena.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
nts/: __init__.py  api.py  app.py  buttons.py  display.py  player.py
tests/: conftest.py  test_api.py  test_app.py  test_buttons.py  test_display.py  test_player.py
