[project]
name = "nts-radio"
# Placeholder — the app version lives in balena.yml, nothing consumes this one
version = "0.0.0"
description = "Stream NTS Radio (live channels + infinite mixtapes) on a Raspberry Pi with Pimoroni Pirate Audio"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28.0",
    "pillow>=9.0.0",
]

[project.optional-dependencies]
# Hardware stack — only installable on the Pi; dev machines and CI skip it
hw = [
    "st7789>=0.0.4",
    "rpi-lgpio>=0.6",
    "spidev>=3.5",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]

[tool.uv]
# Not a distributable package: uv sync installs dependencies only
package = false

# Lock against public PyPI regardless of any machine-level index config
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:PIL",
]
